# claw377

./: .env.example  .gitignore  README.md  context.py  litellm_test.py  loop.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bootstrap/: AGENTS.md  SOUL.md  TOOLS.md
claw377/: __main__.py  app_paths.py  consolidator.py  context.py  loop.py  memory_store.py  memory_writer.py  session.py
claw377/templates/: USER.md
claw377/templates/memory/: MEMORY.md
claw377/tools/: __init__.py  background.py  compact.py  edit_file.py  read_file.py  subagent.py  task_system.py  write_file.py
test/: stream_tool_call.py  tavily_test.py  test_cli_smoke.py  toolkit_test.py
tools/: __init__.py  background.py  bash.py  compact.py  edit_file.py  read_file.py  subagent.py  task.py  task_system.py  web_fetch.py  web_search.py  write_file.py
